# MAchine-L

./: README.md  pyproject.toml
data/schemas/: api_contract_example.json  sample_dataset_schema.csv
scripts/: infer_example.py  train.py
src/agri_ml/: __init__.py  pipeline.py
src/agri_ml/config/: settings.py
src/agri_ml/data/: dataset.py
src/agri_ml/evaluation/: metrics.py
src/agri_ml/features/: engineering.py
src/agri_ml/inference/: predictor.py
src/agri_ml/models/: trainers.py
src/agri_ml/utils/: explainability.py
